# kernedu

./: .gitignore  Makefile  Makefile.rules  README  code16.h  io.h  loader.s  meson.build  os.lds  output.c  output.h  setup.c
01_lds/: Makefile  README  intro.c  intro.lds  meson.build
02_hello/: Makefile  loader.s  meson.build  os.lds
03_c/: Makefile  loader.s  meson.build  os.c  os.lds
04_protected/: Makefile  loader.s  meson.build  os.c  os.lds
05_loading/: Makefile  loader.s  meson.build  os.c  os.lds
06_interrupt/: Makefile  entry.s  irq.c  irq.h  os.c  os.lds
06_keyboard/: os.c
07_interrupt/: Makefile  loader.s  meson.build  os.c  os.lds
09_timer/: Makefile  os.c
10_cpuid/: os.c
11_pci/: os.c
common/: Makefile  io.h  irq.c  irq.h  irq_entry.S  irq_entry.s  meson.build  output.c  output.h  setup.c  setup.h  string.c  string.h  types.h
timer/: Makefile  entry.s  loader.s  os.c  setup.c  timer.h
